# split-bill-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
app/: config.py
app/core/common/: mixins.py  use_cases.py
app/store/postgres/: db.py
app/store/postgres/alembic/: env.py
app/store/postgres/models/: __init__.py  mixins.py
