[project]
name = "split-bill-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.12",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.9.1",
    "pytest-asyncio>=0.26.0",
    "pyyaml>=6.0.2",
    "ruff>=0.11.6",
    "sqlalchemy[asyncio]>=2.0.40",
    "uvicorn>=0.34.2",
]


[tool.ruff]
select = [
  "E",
  "W",
  "F",
  "I",
  "UP",
  "B",
  "C4",
  "RUF",
  "PL",
]

ignore = [
  "E501",
  "F401",
]

line-length = 80

fixable = ["ALL"]
unfixable = []

[tool.ruff.isort]
lines-between-types = 1

[tool.ruff.per-file-ignores]
"tests/*" = ["B011"]
